--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,15 +1,12 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block extra_head %}
-<head>
-        <link rel="stylesheet" type="text/css" href="{% static 'vendor/animate/animate.css' %}">
-        <link rel="stylesheet" type="text/css" href="{% static 'vendor/css-hamburgers/hamburgers.min.css' %}">
-        <link rel="stylesheet" type="text/css" href="{% static 'vendor/select2/select2.min.css' %}">
-        <link rel="stylesheet" type="text/css" href="{% static 'css/util.css' %}">
-        <link rel="stylesheet" type="text/css" href="{% static 'css/contact.css' %}">
-        <link rel="stylesheet" type="text/css" href="{% static 'fonts/font-awesome-4.7.0/css/font-awesome.min.css' %}">
-</head>
-    {% endblock %}
+
+{% block header %}
+
+    <title>Contact</title>
+
+{% endblock %}
+
 {% block content %}
 
     <!-- Contact Section -->
@@ -21,63 +18,62 @@
             <p>Contact Us</p>
         </div><!-- End Section Title -->
 
-        <div class="contact1">
-            <div class="container-contact1">
-                <div class="contact1-pic js-tilt" data-tilt>
-                    <img src="{% get_media_prefix %}images/img-01.png" alt="IMG">
-                </div>
+        <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-                <form class="contact1-form validate-form">
-				<span class="contact1-form-title">
-					Get in touch
-				</span>
+            <div class="row gy-4">
 
-                    <div class="wrap-input1 validate-input" data-validate="Name is required">
-                        <input class="input1" type="text" name="name" placeholder="Name">
-                        <span class="shadow-input1"></span>
-                    </div>
+                <div class="col-lg-12">
+                    <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up"
+                          data-aos-delay="200">
+                        <div class="row gy-4">
 
-                    <div class="wrap-input1 validate-input" data-validate="Valid email is required: ex@abc.xyz">
-                        <input class="input1" type="text" name="email" placeholder="Email">
-                        <span class="shadow-input1"></span>
-                    </div>
+                            <div class="col-md-6">
+                                <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
+                            </div>
 
-                    <div class="wrap-input1 validate-input" data-validate="Subject is required">
-                        <input class="input1" type="text" name="subject" placeholder="Subject">
-                        <span class="shadow-input1"></span>
-                    </div>
+                            <div class="col-md-6 ">
+                                <input type="email" class="form-control" name="email" placeholder="Your Email"
+                                       required="">
+                            </div>
 
-                    <div class="wrap-input1 validate-input" data-validate="Message is required">
-                        <textarea class="input1" name="message" placeholder="Message"></textarea>
-                        <span class="shadow-input1"></span>
-                    </div>
+                            <div class="col-12">
+                                <input type="text" class="form-control" name="subject" placeholder="Subject"
+                                       required="">
+                            </div>
 
-                    <div class="container-contact1-form-btn">
-                        <button class="contact1-form-btn">
-						<span>
-							Send Email
-							<i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-						</span>
-                        </button>
-                    </div>
-                </form>
+                            <div class="col-12">
+                                <textarea class="form-control" name="message" rows="6" placeholder="Message"
+                                          required=""></textarea>
+                            </div>
+
+                            <div class="col-12 text-center">
+                                <div class="loading">Loading</div>
+                                <div class="error-message"></div>
+                                <div class="sent-message">Your message has been sent. Thank you!</div>
+
+                                <button type="submit">Send Message</button>
+                            </div>
+
+                        </div>
+                    </form>
+                </div><!-- End Contact Form -->
+
             </div>
+
         </div>
 
     </section><!-- /Contact Section -->
 
     {% block extra_scripts %}
-        <script src="{% static 'js/contact.js' %}"></script>
         <script src="{% static 'vendor/jquery/jquery-3.2.1.min.js' %}"></script>
-
-        <script src="{% static 'vendor/bootstrap/js/popper.js' %}"></script>
-        <script src="{% static 'vendor/select2/select2.min.js' %}"></script>
-        <script src="{% static 'vendor/tilt/tilt.jquery.min.js' %}"></script>
+        <script src="{% static 'vendor/bootstrap/js/bootstrap.min.js' %}"></script>
+        <script src="{% static 'js/contact.js' %}"></script>
         <script>
             $('.js-tilt').tilt({
                 scale: 1.1
             })
         </script>
+
     {% endblock %}
 
 {% endblock %}
