--- a/templates/includes/head.html
+++ b/templates/includes/head.html
@@ -1,10 +1,8 @@
 {% load static %}
 
-<head>
-
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{ title }}</title>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
     <!-- Favicons -->
     <link rel="icon" type="image/png" href="{% get_media_prefix %}images/icons/favicon.ico"/>
     <link href="{% get_media_prefix %} img/apple-touch-icon.png" rel="apple-touch-icon">
@@ -24,4 +22,4 @@
 
     <!-- Main CSS File -->
     <link href="{% static 'css/main.css' %}" rel="stylesheet">
-</head>
+
