refactor : contact page fixed

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,8 @@
 
 {% block content %}
     <!-- Hero Section -->
-    <section id="hero" class="hero section">
+    <section id="hero" class="hero section"
+             style="background: url({% get_media_prefix %}img/hero-bg.png) top center no-repeat;">
 
         <div class="container">
             <div class="row gy-4">
