--- a/templates/contact.html
+++ b/templates/contact.html
@@ -9,22 +9,19 @@
 
 {% block content %}
 
-    <!-- Contact Section -->
     <section id="contact" class="contact section">
 
-        <!-- Section Title -->
         <div class="container section-title" data-aos="fade-up">
             <h2>Contact</h2>
             <p>Contact Us</p>
-        </div><!-- End Section Title -->
+        </div>
 
         <div class="container" data-aos="fade-up" data-aos-delay="100">
-
             <div class="row gy-4">
-
                 <div class="col-lg-12">
-                    <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up"
+                    <form action="{% url 'contact_form' %}" method="post" class="php-email-form" data-aos="fade-up"
                           data-aos-delay="200">
+                        {% csrf_token %}
                         <div class="row gy-4">
 
                             <div class="col-md-6">
@@ -53,27 +50,11 @@
 
                                 <button type="submit">Send Message</button>
                             </div>
-
                         </div>
                     </form>
-                </div><!-- End Contact Form -->
-
+                </div>
             </div>
-
         </div>
-
-    </section><!-- /Contact Section -->
-
-    {% block extra_scripts %}
-        <script src="{% static 'vendor/jquery/jquery-3.2.1.min.js' %}"></script>
-        <script src="{% static 'vendor/bootstrap/js/bootstrap.min.js' %}"></script>
-        <script src="{% static 'js/contact.js' %}"></script>
-        <script>
-            $('.js-tilt').tilt({
-                scale: 1.1
-            })
-        </script>
-
-    {% endblock %}
+    </section>
 
 {% endblock %}
