--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -4,7 +4,6 @@
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
 
         <a href="{% url 'index' %}" class="logo d-flex align-items-center me-auto">
-            <!-- Uncomment the line below if you also wish to use an image logo -->
             <img src="{% get_media_prefix %}img/logo.png" alt="">
             <h1 class="sitename">Sanal Ajanda</h1>
         </a>
@@ -12,8 +11,9 @@
         <nav id="navmenu" class="navmenu">
             <ul>
                 <li><a href="{% url 'index' %}" class="active">Home<br></a></li>
-                <li><a href="{% url 'index' %}#services">Services</a></li>
-                <li><a href="{% url 'index' %}#portfolio">Portfolio</a></li>
+                <li><a href="{% url 'index' %}#stats">Hizmetler</a></li>
+                <li><a href="{% url 'index' %}#pricing">Fiyatlandirma</a></li>
+                <li><a href="{% url 'index' %}#faq">SSS</a></li>
                 <li><a href="{% url 'contact' %}">Contact</a></li>
             </ul>
             <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
