refactor: edit index.html links

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 
 {% block header %}
 
-    <title>Sanal Ajanda</title>
+    <title>{{ index_site_title }}</title>
 
 {% endblock %}
 
@@ -15,15 +15,14 @@
         <div class="container">
             <div class="row gy-4">
                 <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center">
-                    <h1 data-aos="fade-up">We offer modern solutions for growing your business</h1>
-                    <p data-aos="fade-up" data-aos-delay="100">We are team of talented designers making websites with
-                        Bootstrap</p>
+                    <h1 data-aos="fade-up">{{ hero_title }}</h1>
+                    <p data-aos="fade-up" data-aos-delay="100">{{ hero_description }}</p>
                     <div class="d-flex flex-column flex-md-row" data-aos="fade-up" data-aos-delay="200">
-                        <a href="{% url 'index' %}" class="btn-get-started">Get Started<i
+                        <a href="{{ get_started_btn_link }}" class="btn-get-started">{{ get_started_btn_text }}<i
                                 class="bi bi-arrow-right"></i></a>
-                        <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8"
+                        <a href="{{ watch_video_btn_link }}https://www.youtube.com/watch?v=Y7f98aduVJ8"
                            class="glightbox btn-watch-video d-flex align-items-center justify-content-center ms-0 ms-md-4 mt-4 mt-md-0"><i
-                                class="bi bi-play-circle"></i><span>Watch Video</span></a>
+                                class="bi bi-play-circle"></i><span>{{ watch_video_btn_text }}</span></a>
                     </div>
                 </div>
                 <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-out">
