--- a/templates/includes/head.html
+++ b/templates/includes/head.html
@@ -2,6 +2,8 @@
 
 <meta charset="UTF-8">
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
+<meta name="keywords" content="{{ site_keywords }}">
+<meta name="description" content="{{ site_description }}">
 
 <link rel="icon" type="image/png" href="{% get_media_prefix %}images/icons/favicon.ico"/>
 
