--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,8 @@
                     <div class="stats-item d-flex align-items-center w-100 h-100">
                         <i class="bi bi-emoji-smile color-blue flex-shrink-0"></i>
                         <div>
-                            <span data-purecounter-start="0" data-purecounter-end="{{ stats_member_num }}" data-purecounter-duration="1"
+                            <span data-purecounter-start="0" data-purecounter-end="{{ stats_member_num }}"
+                                  data-purecounter-duration="1"
                                   class="purecounter"></span>
                             <p>{{ stats_member_text }}</p>
                         </div>
@@ -55,7 +56,8 @@
                     <div class="stats-item d-flex align-items-center w-100 h-100">
                         <i class="bi bi-journal-richtext color-orange flex-shrink-0" style="color: #ee6c20;"></i>
                         <div>
-                            <span data-purecounter-start="0" data-purecounter-end="{{ stats_days_num }}" data-purecounter-duration="1"
+                            <span data-purecounter-start="0" data-purecounter-end="{{ stats_days_num }}"
+                                  data-purecounter-duration="1"
                                   class="purecounter"></span>
                             <p>{{ stats_days_text }}</p>
                         </div>
@@ -66,7 +68,8 @@
                     <div class="stats-item d-flex align-items-center w-100 h-100">
                         <i class="bi bi-headset color-green flex-shrink-0" style="color: #15be56;"></i>
                         <div>
-                            <span data-purecounter-start="0" data-purecounter-end="{{ stats_notes_num }}" data-purecounter-duration="1"
+                            <span data-purecounter-start="0" data-purecounter-end="{{ stats_notes_num }}"
+                                  data-purecounter-duration="1"
                                   class="purecounter"></span>
                             <p>{{ stats_notes_text }}</p>
                         </div>
@@ -77,7 +80,8 @@
                     <div class="stats-item d-flex align-items-center w-100 h-100">
                         <i class="bi bi-people color-pink flex-shrink-0" style="color: #bb0852;"></i>
                         <div>
-                            <span data-purecounter-start="0" data-purecounter-end="{{ stats_other_num }}" data-purecounter-duration="1"
+                            <span data-purecounter-start="0" data-purecounter-end="{{ stats_other_num }}"
+                                  data-purecounter-duration="1"
                                   class="purecounter"></span>
                             <p>{{ stats_other_text }}</p>
                         </div>
