--- a/templates/contact.html
+++ b/templates/contact.html
@@ -20,27 +20,29 @@
             <div class="row gy-4">
                 <div class="col-lg-12">
                     <form action="{% url 'contact_form' %}" method="post" class="php-email-form" data-aos="fade-up"
-                          data-aos-delay="200">
+                          data-aos-delay="200" id="contact-form">
                         {% csrf_token %}
                         <div class="row gy-4">
 
                             <div class="col-md-6">
-                                <input type="text" name="name" class="form-control" placeholder="İsim Soyisim"
+                                <input type="text" id="{{ contact_form.name.id_for_label }}"
+                                       name="{{ contact_form.name.html_name }}" class="form-control"
+                                       placeholder="İsim Soyisim"
                                        required="">
                             </div>
 
                             <div class="col-md-6 ">
-                                <input type="email" class="form-control" name="email" placeholder="E-Posta Adresiniz"
+                                <input type="email" id="{{ contact_form.email.id_for_label }}" class="form-control" name="{{ contact_form.email.html_name }}" placeholder="E-Posta Adresiniz"
                                        required="">
                             </div>
 
                             <div class="col-12">
-                                <input type="text" class="form-control" name="subject" placeholder="Konu"
+                                <input type="text" id="{{ contact_form.subject.id_for_label }}" class="form-control" name="{{ contact_form.subject.html_name }}" placeholder="Konu"
                                        required="">
                             </div>
 
                             <div class="col-12">
-                                <textarea class="form-control" name="message" rows="6" placeholder="Mesajınız"
+                                <textarea class="form-control" id="{{ contact_form.message.id_for_label }}" name="{{ contact_form.message.html_name }}" rows="6" placeholder="Mesajınız"
                                           required=""></textarea>
                             </div>
 
