--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -15,11 +15,18 @@
                 <li><a href="{% url 'index' %}#pricing">Fiyatlandirma</a></li>
                 <li><a href="{% url 'index' %}#faq">SSS</a></li>
                 <li><a href="{% url 'contact' %}">Contact</a></li>
+                {% if user.is_authenticated %}
+                <li><a href="{% url 'profile' %}">Profil</a></li>
+                <li><a href="{% url 'logout' %}">Cikis</a></li>
+                {% else %}
+                <a class="btn-getlogin flex-md-shrink-0" href="{% url 'login' %}">Giris</a>
+                <a class="btn-getstarted flex-md-shrink-0" href="{% url 'register' %}">Kayit Ol</a>
+                {% endif %}
             </ul>
             <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
 
-        <a class="btn-getstarted flex-md-shrink-0" href="{% url 'index' %}">Get Started</a>
+
 
     </div>
 </header>
