--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -21,6 +21,13 @@
             <p><strong>Username:</strong> {{ user.username }}</p>
 <p><strong>Email:</strong> {{ user.email }}</p>
 <p><a href="{% url 'profile_edit' %}">Edit Profile</a></p>
+
+            <p>Membership Level: {{ user.membership_level }}</p>
+{% if user.membership_expiry %}
+    <p>Expires On: {{ user.membership_expiry|date:"d M Y H:i" }}</p>
+{% else %}
+    <p>Membership does not expire.</p>
+{% endif %}
         </div>
     </section>
 {% endblock %}
