feat: add users admin pages and fix html pages

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,10 +16,18 @@
 
     {% endblock %}
 
+{% include 'includes/messages.html' %}
+
+    {% block d_content %}
+
+    {% endblock %}
+
     {% block extra_scripts %}
 
     {% endblock %}
+
 </main>
+
 {% include 'includes/footer.html' %}
 {% include 'includes/scripts.html' %}
 </body>
