--- a/templates/users/password_reset_confirm.html
+++ b/templates/users/password_reset_confirm.html
@@ -12,16 +12,21 @@
 
         <!-- Section Title -->
         <div class="container section-title" data-aos="fade-up">
-            <h2>Giris</h2>
+            <h2>Set a New Password</h2>
 
         </div><!-- End Section Title -->
 
         <div class="container">
+
+            <p>Enter your new password below:</p>
+
             <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Reset Password</button>
-</form>
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit">Reset Password</button>
+            </form>
+
+            <a href="{% url 'login' %}">Back to Login</a>
         </div>
     </section>
 {% endblock %}
