--- a/templates/users/register.html
+++ b/templates/users/register.html
@@ -12,7 +12,7 @@
 
         <!-- Section Title -->
         <div class="container section-title" data-aos="fade-up">
-            <h2>Giris</h2>
+            <h2>Kayit</h2>
 
         </div><!-- End Section Title -->
 
