--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -8,21 +8,24 @@
 {% endblock %}
 
 {% block content %}
-    <section id="giris" class="section">
+    <section class="section" style="padding-top: 150px; scroll-margin-top: 98px;
+    overflow: clip">
 
-        <!-- Section Title -->
-        <div class="container section-title" data-aos="fade-up">
-            <h2>Giris</h2>
+    <!-- Section Title -->
+    <div class="container section-title" data-aos="fade-up">
+        <h2>Giris</h2>
 
-        </div><!-- End Section Title -->
+    </div><!-- End Section Title -->
 
-        <div class="container">
-            <form method="post">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <button type="submit">Login</button>
-            </form>
-            <a href="{% url 'password_reset' %}">Forgot Password?</a>
-        </div>
+    <div class="container">
+{% endblock %}
+{% block d_content %}
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Login</button>
+    </form>
+    <a href="{% url 'password_reset' %}">Forgot Password?</a>
+    </div>
     </section>
 {% endblock %}
