--- a/templates/users/password_reset.html
+++ b/templates/users/password_reset.html
@@ -17,11 +17,15 @@
         </div><!-- End Section Title -->
 
         <div class="container">
+            <p>Enter your email address below, and we’ll send you instructions for setting a new one.</p>
+
             <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Send Reset Email</button>
-</form>
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit">Send Password Reset Email</button>
+            </form>
+
+            <a href="{% url 'login' %}">Back to Login</a>
         </div>
     </section>
 {% endblock %}
