--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block content %}
-    <section class="section" style="padding-top: 150px; scroll-margin-top: 98px;
+    <section class="section" style="padding-top: 155px; scroll-margin-top: 98px;
     overflow: clip">
 
     <!-- Section Title -->
@@ -17,7 +17,7 @@
 
     </div><!-- End Section Title -->
 
-    <div class="container">
+    <div class="container" data-aos="fade-up" data-aos-delay="100">
 {% endblock %}
 {% block d_content %}
     <form method="post">
