--- a/templates/users/password_reset.html
+++ b/templates/users/password_reset.html
@@ -8,7 +8,8 @@
 {% endblock %}
 
 {% block content %}
-    <section id="giris" class="section">
+    <section id="giris" class="section" style="padding-top: 155px; scroll-margin-top: 98px;
+    overflow: clip">
 
         <!-- Section Title -->
         <div class="container section-title" data-aos="fade-up">
@@ -16,7 +17,9 @@
 
         </div><!-- End Section Title -->
 
-        <div class="container">
+        <div class="container" data-aos="fade-up" data-aos-delay="100">
+           {% endblock %}
+{% block d_content %}
             <p>Enter your email address below, and we’ll send you instructions for setting a new one.</p>
 
             <form method="post">
