--- a/templates/users/password_reset_done.html
+++ b/templates/users/password_reset_done.html
@@ -8,7 +8,8 @@
 {% endblock %}
 
 {% block content %}
-    <section id="giris" class="section">
+    <section id="giris" class="section" style="padding-top: 155px; scroll-margin-top: 98px;
+    overflow: clip">
 
         <!-- Section Title -->
         <div class="container section-title" data-aos="fade-up">
@@ -16,7 +17,9 @@
 
         </div><!-- End Section Title -->
 
-        <div class="container">
+        <div class="container" data-aos="fade-up" data-aos-delay="100">
+            {% endblock %}
+{% block d_content %}
 
             <p>If an account exists for the email address you entered, you will receive a password reset email
                 shortly.</p>
