--- a/templates/contact.html
+++ b/templates/contact.html
@@ -9,7 +9,8 @@
 
 {% block content %}
 
-    <section id="contact" class="contact section">
+    <section id="contact" class="contact section" style="padding-top: 155px; scroll-margin-top: 98px;
+    overflow: clip">
 
         <div class="container section-title" data-aos="fade-up">
             <h2>İletişim</h2>
@@ -17,6 +18,8 @@
         </div>
 
         <div class="container" data-aos="fade-up" data-aos-delay="100">
+            {% endblock %}
+{% block d_content %}
             <div class="row gy-4">
                 <div class="col-lg-12">
                     <form action="{% url 'contact_form' %}" method="post" class="php-email-form" data-aos="fade-up"
