--- a/templates/users/profile_edit.html
+++ b/templates/users/profile_edit.html
@@ -8,21 +8,24 @@
 {% endblock %}
 
 {% block content %}
-    <section id="giris" class="section">
+    <section id="profile-edit" class="section" style="padding-top: 155px; scroll-margin-top: 98px;
+    overflow: clip">
 
-        <!-- Section Title -->
-        <div class="container section-title" data-aos="fade-up">
-            <h2>Profili Duzenle</h2>
+    <!-- Section Title -->
+    <div class="container section-title" data-aos="fade-up">
+        <h2>Profili Duzenle</h2>
 
-        </div><!-- End Section Title -->
+    </div><!-- End Section Title -->
 
-        <div class="container">
-            <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Save Changes</button>
-                <a href="{% url 'upgrade_membership' %}">Upgrade Membership</a>
-</form>
-        </div>
+    <div class="container" data-aos="fade-up" data-aos-delay="100">
+{% endblock %}
+{% block d_content %}
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Save Changes</button>
+        <a href="{% url 'upgrade_membership' %}">Upgrade Membership</a>
+    </form>
+    </div>
     </section>
 {% endblock %}
