--- a/templates/users/upgrade_membership.html
+++ b/templates/users/upgrade_membership.html
@@ -8,35 +8,75 @@
 {% endblock %}
 
 {% block content %}
-    <section id="giris" class="section">
+    <section id="giris" class="section" style="padding-top: 155px; scroll-margin-top: 98px;
+    overflow: clip">
 
-        <!-- Section Title -->
-        <div class="container section-title" data-aos="fade-up">
-            <h2>Giris</h2>
+    <!-- Section Title -->
+    <div class="container section-title" data-aos="fade-up">
+        <h2>Giris</h2>
 
-        </div><!-- End Section Title -->
+    </div><!-- End Section Title -->
 
-        <div class="container">
-            <p>Welcome, {{ user.email }}! Your current membership level is:</p>
-            <p><strong>{{ user.membership_type }}</strong></p>
+    <div class="container" data-aos="fade-up" data-aos-delay="100">
+{% endblock %}
+{% block d_content %}
+    <p>Welcome, {{ user.email }}! </p>
 
+    <form method="post" action="{% url 'upgrade_membership' %}">
+        {% csrf_token %}
 
+        {% if user.membership_type == 'standard' %}
             {% if user.requested_membership_type %}
-                <p>You have requested to upgrade to: <strong>{{ user.requested_membership_type }}</strong>. Waiting for
-                    admin approval.</p>
-            {% elif user.membership_type == 'standard' %}
-                <p>You can upgrade your membership to unlock additional features!</p>
-                <form method="post" action="{% url 'upgrade_membership' %}">
-                    {% csrf_token %}
-                    {{ form.as_p }}
-                    <button type="submit" class="btn btn-primary">Upgrade</button>
-                </form>
+                <p>Current Membership Type: <strong>{{ user.get_membership_type_display }}</strong></p>
+                <p>Uyeliginizi yukseltme talebiniz bulunmaktadir onaylandiginda daha fazla ozellikten
+                    faydalanabilirsiniz</p>
+                <p>Talep edilen paket : {{ user.get_requested_membership_type_display }}</p>
+                <p>Talep edilen sure : {{ user.get_requested_duration_display }}</p>
+
             {% else %}
-                <p>Your membership level is already upgraded.</p>
+                <p>Current Membership Type: <strong>{{ user.get_membership_type_display }}</strong></p>
+                <p>Uyeliginizi yukselterek daha fazla ozellikten faydalanabilirsiniz</p>
+                <!-- Üyelik tipi ve süre seçimi göster -->
+                <div class="form-group">
+                    <label for="id_requested_membership_type">Üyelik Tipi</label>
+                    {{ form.requested_membership_type }}
+                </div>
+                <div class="form-group">
+                    <label for="id_requested_duration">Üyelik Süresi</label>
+                    {{ form.requested_duration }}
+                </div>
             {% endif %}
+        {% else %}
 
+            {% if user.requested_duration %}
+                <p>Current Membership Type: <strong>{{ user.get_membership_type_display }}</strong></p>
+                <p>Current Duration time: <strong>{{ user.membership_expiry|date:"d/m/Y" }}</strong></p>
+                <p>Uyelik surenizi uzatma talebiniz bulunmaktadir onaylandiginda daha fazla ozellikten
+                    faydalanabilirsiniz</p>
 
-            <p><a href="{% url 'profile' %}">Back to Profile</a></p>
-        </div>
+                <p>Talep edilen sure : {{ user.get_requested_duration_display }}</p>
+                <br>
+                <div class="form-group">
+                    <label for="id_requested_duration">Süre Uzatma Talebini Degistir</label>
+                    <br>
+                    {{ form.requested_duration }}
+                </div>
+
+            {% else %}
+                <!-- Sadece süre seçimi -->
+                <p>Current Membership Type: <strong>{{ user.get_membership_type_display }}</strong></p>
+                <p>Membership Expiry: <strong>{{ user.membership_expiry|date:"d/m/Y" }}</strong></p>
+                <div class="form-group">
+                    <label for="id_requested_duration">Süre Uzatma Talebi</label>
+                    {{ form.requested_duration }}
+                </div>
+            {% endif %}
+        {% endif %}
+        {% if not user.requested_membership_type %}
+            <button type="submit" class="btn btn-primary">Submit Request</button>
+        {% endif %}
+    </form>
+    <p><a href="{% url 'profile' %}">Back to Profile</a></p>
+    </div>
     </section>
 {% endblock %}
