--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -1,31 +1,108 @@
 {% extends 'base.html' %}
+{% load i18n %}
 {% load static %}
 
 {% block header %}
 
     <title>{{ index_site_title }}</title>
+    <style>
+        .form-container {
+            display: flex;
+            justify-content: center;
+            min-height: 38vh;
+        }
+
+        .login-form {
+            width: 100%;
+            max-width: 600px;
+            padding: 20px;
+            background: #fff;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        .form-group {
+            margin-bottom: 15px;
+        }
+
+        .form-button {
+            text-align: center;
+        }
+
+        .btn-link {
+            display: inline-block;
+            margin-top: 10px;
+            font-size: 0.9rem;
+            text-decoration: none;
+            color: #007bff;
+        }
+
+        .btn-link:hover {
+            text-decoration: underline;
+        }
+
+    </style>
 
 {% endblock %}
 
 {% block content %}
-    <section class="section" style="padding-top: 155px; scroll-margin-top: 98px;
+    <section id="login" class="section" style="padding-top: 155px; scroll-margin-top: 98px;
     overflow: clip">
 
     <!-- Section Title -->
     <div class="container section-title" data-aos="fade-up">
-        <h2>Giris</h2>
+        <h2>{% trans 'Giriş' %}</h2>
 
     </div><!-- End Section Title -->
 
-    <div class="container" data-aos="fade-up" data-aos-delay="100">
+    <div class="container form-container" data-aos="fade-up" data-aos-delay="100">
+
 {% endblock %}
 {% block d_content %}
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Login</button>
-    </form>
-    <a href="{% url 'password_reset' %}">Forgot Password?</a>
-    </div>
+
+            <form method="POST" class="login-form form-control" id="login-form">
+                {% csrf_token %}
+                <div class="form-group">
+                    <input type="text" id="{{ form.username.id_for_label }}"
+                           name="{{ form.username.html_name }}" class="form-control"
+                           placeholder="{% trans 'Email' %}" required>
+                </div>
+
+                <!-- Password -->
+                <div class="form-group">
+                    <input type="password" id="{{ form.password.id_for_label }}"
+                           name="{{ form.password.html_name }}" class="form-control"
+                           placeholder="{% trans 'Şifre' %}" required>
+                </div>
+
+                <!-- Remember Me -->
+                <div class="form-group">
+                    <input type="checkbox" id="{{ form.remember_me.id_for_label }}"
+                           name="{{ form.remember_me.html_name }}" class="form-check-input">
+                    <label for="{{ form.remember_me.id_for_label }}" class="form-label">
+                        {{ form.remember_me.label }}
+                    </label>
+                </div>
+
+                <!-- Forgot Password -->
+                <div class="form-group form-button">
+                    <a href="{% url 'password_reset' %}" class="btn-link">{% trans 'Şifreni mi Unuttun?' %}</a>
+                </div>
+
+                <!-- Login Button -->
+                <div class="form-group form-button">
+                    <input type="submit" name="login" id="login" class="btn btn-success form-submit"
+                           value="{% trans 'Giriş Yap' %}">
+                </div>
+
+                <!-- Register Link -->
+                <div class="form-group form-button">
+                    <a class="btn btn-outline-info" href="{% url 'register' %}">{% trans 'Hesabım Yok - Kayıt Ol' %}</a>
+                </div>
+            </form>
+
+        </div>
+
+
     </section>
 {% endblock %}
